# jdwp-toolkit

./: ApplicationContext.cpp  ApplicationContext.h  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build-test.yml
client/: CMakeLists.txt  JdwpClientWrapper.cpp  JdwpClientWrapper.h
controllers/: CMakeLists.txt  MainWindowController.cpp  MainWindowController.h  VmController.cpp  VmController.h
model/: CMakeLists.txt  Connection.cpp  Connection.h
ui/: CMakeLists.txt
ui/dialog/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  CommandPanel.cpp  CommandPanel.h  NewConnectionDialog.cpp  NewConnectionDialog.h
ui/panels/: BasePanel.cpp  BasePanel.h  CMakeLists.txt
ui/panels/vm/: CMakeLists.txt  VmAllClassesPanel.cpp  VmAllClassesPanel.h  VmAllThreadsPanel.cpp  VmAllThreadsPanel.h  VmCapabilitiesNewPanel.cpp  VmCapabilitiesNewPanel.h  VmCapabilitiesPanel.cpp  VmCapabilitiesPanel.h  VmClassPathPanel.cpp  VmClassPathPanel.h  VmClassesBySignaturePanel.cpp  VmClassesBySignaturePanel.h  VmCreateStringPanel.cpp  VmCreateStringPanel.h  VmDisposeObjectsPanel.cpp  VmDisposeObjectsPanel.h  VmDisposePanel.cpp  VmDisposePanel.h  VmExitPanel.cpp  VmExitPanel.h  VmHoldEventsPanel.cpp  VmHoldEventsPanel.h  VmIdSizesPanel.cpp  VmIdSizesPanel.h  VmIndexPanel.cpp  VmIndexPanel.h  VmReleaseEventsPanel.cpp  VmReleaseEventsPanel.h  VmResumePanel.cpp  VmResumePanel.h  VmSuspendPanel.cpp  VmSuspendPanel.h  VmTopLevelThreadGroupsPanel.cpp  VmTopLevelThreadGroupsPanel.h  (+2 more)
util/: CMakeLists.txt  JdwpConstantsMapper.cpp  JdwpConstantsMapper.h  UrlMapper.cpp  UrlMapper.h
(+9 files in other folders)
